# fastrtc-gemini

./: README.md  pyproject.toml
iac/: main.tf  terraform.tfvars  variables.tf
iac/user_data/: fastrtc.service  user_data.sh.tftpl
src/fastrtc_gemini/: __init__.py  main.py
