[project]
name = "fastrtc-gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bensooraj", email = "bensooraj@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastrtc[stt,tts,vad]>=0.0.32",
    "numpy>=2.2.6",
    "openai>=1.103.0",
]

[project.scripts]
fastrtc-gemini = "fastrtc_gemini:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
